fixed styling on mobile

--- a/src/components/TaskItem/taskitem.scss
+++ b/src/components/TaskItem/taskitem.scss
@@ -56,6 +56,14 @@
   }
 }
 
+@media screen and (max-width: 1024px) {
+  .tl-task-item {
+    .tl-task-item__task-name {
+      flex-grow: 1;
+    }
+  }
+}
+
 // .task-item {
 //   padding: 0.8rem;
 //   border: 2px solid var(--grey-2);
